# HospitSim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hdts.py  pyproject.toml
.github/workflows/: ci.yml
app/: hdts_app.py
docs/: jmir_submission_roadmap.md
examples/: omop_to_scenario.py  synthea_omop_etl.py
hospital_simulator/: __init__.py  calibration.py  constants.py  events.py  graph.py  observed.py  omop.py  orchestration.py  pathways.py  patient.py  plotting.py  scenario.py  validation.py  visualization.py
hospital_simulator/data/: pathways.yaml
hospital_simulator/models/: _ccam_validator.py  _cid_validator.py  base_service.py  data_structure.py
hospital_simulator/services/: service_manager.py  service_registry.py
hospital_simulator/tests/: __init__.py
notebooks/: synthea_omop_calibration.ipynb
scripts/: validation_study.py
tests/: test_app_demonstrator.py  test_basic.py  test_example_omop_pipeline.py  test_example_synthea_etl.py  test_mimic_adapter.py  test_omop_input_checks.py  test_phase1_extras.py  test_phase2_clinical.py  test_phase2_graph_routing.py  test_phase3_calibration.py  test_phase4_replications.py  test_phase4_scenario.py  test_phase4_sensitivity.py  test_plotting.py  test_standalone_and_concurrency.py  test_synthea_adapter.py  test_validation.py  test_validation_metrics.py  test_validation_study_script.py
